# text_detection

./: pyproject.toml
setup/: cascade_tabnet.sh  tesseract.sh
text_detection/: paths.py  pdf_2_text_pattern_matching.py  tesseract.py  txt_tmplt_matching_n_marking.py
