[tool.poetry]
name = "text-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.10"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
pdf2image = "^1.17.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
pymupdf = "^1.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
